istio-kiali-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kiali-test
  namespace: istio-system
  labels:
    app: kiali
spec:
  selector:
    app: kiali
  type: NodePort
  ports:
    - name: http-kiali
      protocol: TCP
      port: 20001
      nodePort: 32143
