mater1.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-go
  labels:
    app: service-go
spec:
  selector:
    app: service-go
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-go-v1
spec:
  selector:
    matchLabels:
      app: service-go
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-go
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name: service-go
        image: gcr.io/booming-triode-235407/service-go:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-go-v2
spec:
  selector:
    matchLabels:
      app: service-go
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-go
        version: v2
    spec:
      restartPolicy: Always
      containers:
      - name: service-go
        image: gcr.io/booming-triode-235407/service-go:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
kind: Service
apiVersion: v1
metadata:
  name: service-js
  labels:
    app: service-js
spec:
  selector:
    app: service-js
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-js-v1
spec:
  selector:
    matchLabels:
      app: service-js
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-js
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name: service-js
        image: gcr.io/booming-triode-235407/service-js:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-js-v2
spec:
  selector:
    matchLabels:
      app: service-js
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-js
        version: v2
    spec:
      restartPolicy: Always
      containers:
      - name: service-js
        image: gcr.io/booming-triode-235407/service-js:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
kind: Service
apiVersion: v1
metadata:
  name: service-lua
  labels:
    app: service-lua
spec:
  selector:
    app: service-lua
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-lua-v1
spec:
  selector:
    matchLabels:
      app: service-lua
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-lua
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name: service-lua
        image: gcr.io/booming-triode-235407/service-lua:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-lua-v2
spec:
  selector:
    matchLabels:
      app: service-lua
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-lua
        version: v2
    spec:
      restartPolicy: Always
      containers:
      - name: service-lua
        image: gcr.io/booming-triode-235407/service-lua:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
kind: Service
apiVersion: v1
metadata:
  name: service-node
  labels:
    app: service-node
spec:
  selector:
    app: service-node
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-node-v1
spec:
  selector:
    matchLabels:
      app: service-node
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-node
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name: service-node
        image: gcr.io/booming-triode-235407/service-node:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-node-v2
spec:
  selector:
    matchLabels:
      app: service-node
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-node
        version: v2
    spec:
      restartPolicy: Always
      containers:
      - name: service-node
        image: gcr.io/booming-triode-235407/service-node:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
kind: Service
apiVersion: v1
metadata:
  name: service-python
  labels:
    app: service-python
spec:
  selector:
    app: service-python
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-python-v1
spec:
  selector:
    matchLabels:
      app: service-python
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-python
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name: service-python
        image: gcr.io/booming-triode-235407/service-python:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-python-v2
spec:
  selector:
    matchLabels:
      app: service-python
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-python
        version: v2
    spec:
      restartPolicy: Always
      containers:
      - name: service-python
        image: gcr.io/booming-triode-235407/service-python:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
