remote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-go-v2
spec:
  selector:
    matchLabels:
      app: service-go
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-go
        version: v2
    spec:
      restartPolicy: Always
      containers:
      - name: service-go
        image: gcr.io/booming-triode-235407/service-go:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
kind: Service
apiVersion: v1
metadata:
  name: service-node
  labels:
    app: service-node
spec:
  selector:
    app: service-node
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-node-v1
spec:
  selector:
    matchLabels:
      app: service-node
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-node
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name: service-node
        image: gcr.io/booming-triode-235407/service-node:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-node-v2
spec:
  selector:
    matchLabels:
      app: service-node
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-node
        version: v2
    spec:
      restartPolicy: Always
      containers:
      - name: service-node
        image: gcr.io/booming-triode-235407/service-node:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
