gateway-multi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-lab-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-js
spec:
  host: service-js
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-lab
spec:
  hosts:
  - "*"
  gateways:
  - istio-lab-gateway
  http:
  - match:
    - uri:
        prefix: /env
    route:
    - destination:
        host: service-python
  - route:
    - destination:
        host: service-js
        subset: v1
