gateway1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-lab-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-lab
spec:
  hosts:
  - "*"
  gateways:
  - istio-lab-gateway
  http:
  - match:
    - uri:
        prefix: /env
    route:
    - destination:
        host: service-python
  - route:
    - destination:
        host: service-js
        subset: v1
        
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-js
spec:
  host: service-js
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL 

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-node
spec:
  host: service-node
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-node
spec:
  hosts:
  - service-node
  http:
  - route:
    - destination:
        host: service-node
        subset: v1
      weight: 20
    - destination:
        host: service-node
        subset: v2
      weight: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-lua
spec:
  hosts:
  - service-lua
  http:
  - route:
    - destination:
        host: service-lua
        subset: v1
      weight: 50
    - destination:
        host: service-lua
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
  - service-go
  http:
  - route:
    - destination:
        host: service-go
        subset: v1
      weight: 50
    - destination:
        host: service-go
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-lua
spec:
  host: service-lua
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
